--- a/pandas_quiz.ipynb
+++ b/pandas_quiz.ipynb
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -872,23 +872,22 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "product_cd            0\n",
-       "category_major_cd     0\n",
-       "category_medium_cd    0\n",
-       "category_small_cd     0\n",
-       "unit_price            7\n",
-       "unit_cost             7\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product_cd           0\n",
+      "category_major_cd     0\n",
+      "category_medium_cd    0\n",
+      "category_small_cd     0\n",
+      "unit_price            7\n",
+      "unit_cost             7\n",
+      "dtype: int64\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(df_product.isnull().sum())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -904,18 +903,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "q3_9sLdHhhzt"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_product_1=df_product.dropna()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -928,7 +929,7 @@
        "(10030, 10023)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 116,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -959,23 +960,25 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "product_cd            0\n",
-       "category_major_cd     0\n",
-       "category_medium_cd    0\n",
-       "category_small_cd     0\n",
-       "unit_price            0\n",
-       "unit_cost             0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product_cd           0\n",
+      "category_major_cd     0\n",
+      "category_medium_cd    0\n",
+      "category_small_cd     0\n",
+      "unit_price            0\n",
+      "unit_cost             0\n",
+      "dtype: int64\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "mean_unit_price=round(df_product['unit_price'].mean())\n",
+    "mean_unit_cost=round(df_product['unit_cost'].mean())\n",
+    "df_product_2=df_product.fillna({'unit_price': mean_unit_price,'unit_cost': mean_unit_cost})\n",
+    "print(df_product_2.isnull().sum())"
+   ]
   },
   {
    "attachments": {},
