--- a/pandas_quiz.ipynb
+++ b/pandas_quiz.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -176,7 +176,7 @@
        "72254   20180911  CS018205000001  P071401005         1    1100"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -343,7 +343,7 @@
        "7039   6-20100510-1  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -384,7 +384,7 @@
        "104681"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -610,7 +610,7 @@
        "      <td>144-0056</td>\n",
        "      <td>東京都大田区西六郷**********</td>\n",
        "      <td>S13001</td>\n",
-       "      <td>1970-01-01 00:00:00.020151105</td>\n",
+       "      <td>20151105</td>\n",
        "      <td>7-20100308-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -625,7 +625,7 @@
        "      <td>144-0056</td>\n",
        "      <td>東京都大田区西六郷**********</td>\n",
        "      <td>S13001</td>\n",
-       "      <td>1970-01-01 00:00:00.020160412</td>\n",
+       "      <td>20160412</td>\n",
        "      <td>5-20100731-7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -640,7 +640,7 @@
        "      <td>144-0056</td>\n",
        "      <td>東京都大田区西六郷**********</td>\n",
        "      <td>S13001</td>\n",
-       "      <td>1970-01-01 00:00:00.020150417</td>\n",
+       "      <td>20150417</td>\n",
        "      <td>B-20100405-9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -655,7 +655,7 @@
        "      <td>140-0013</td>\n",
        "      <td>東京都品川区南大井**********</td>\n",
        "      <td>S13001</td>\n",
-       "      <td>1970-01-01 00:00:00.020160505</td>\n",
+       "      <td>20160505</td>\n",
        "      <td>4-20100322-2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -670,7 +670,7 @@
        "      <td>210-0022</td>\n",
        "      <td>神奈川県川崎市川崎区池田**********</td>\n",
        "      <td>S13001</td>\n",
-       "      <td>1970-01-01 00:00:00.020150731</td>\n",
+       "      <td>20150731</td>\n",
        "      <td>3-20080127-2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -685,22 +685,22 @@
        "5  CS001211000025     456         河野 夏希          1     女性  1996-06-09   22   \n",
        "6  CS001212000027     448        杉山 なぎさ          1     女性  1991-03-25   28   \n",
        "\n",
-       "  postal_cd                 address application_store_cd  \\\n",
-       "0  144-0056     東京都大田区西六郷**********               S13001   \n",
-       "1  144-0056     東京都大田区西六郷**********               S13001   \n",
-       "2  144-0056     東京都大田区西六郷**********               S13001   \n",
-       "5  140-0013     東京都品川区南大井**********               S13001   \n",
-       "6  210-0022  神奈川県川崎市川崎区池田**********               S13001   \n",
+       "  postal_cd                 address application_store_cd  application_date  \\\n",
+       "0  144-0056     東京都大田区西六郷**********               S13001          20151105   \n",
+       "1  144-0056     東京都大田区西六郷**********               S13001          20160412   \n",
+       "2  144-0056     東京都大田区西六郷**********               S13001          20150417   \n",
+       "5  140-0013     東京都品川区南大井**********               S13001          20160505   \n",
+       "6  210-0022  神奈川県川崎市川崎区池田**********               S13001          20150731   \n",
        "\n",
-       "               application_date     status_cd  \n",
-       "0 1970-01-01 00:00:00.020151105  7-20100308-1  \n",
-       "1 1970-01-01 00:00:00.020160412  5-20100731-7  \n",
-       "2 1970-01-01 00:00:00.020150417  B-20100405-9  \n",
-       "5 1970-01-01 00:00:00.020160505  4-20100322-2  \n",
-       "6 1970-01-01 00:00:00.020150731  3-20080127-2  "
+       "      status_cd  \n",
+       "0  7-20100308-1  \n",
+       "1  5-20100731-7  \n",
+       "2  B-20100405-9  \n",
+       "5  4-20100322-2  \n",
+       "6  3-20080127-2  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -764,17 +764,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               application_date     customer_id\n",
-      "0 1970-01-01 00:00:00.020150905  CS021313000114\n",
-      "1 1970-01-01 00:00:00.020150414  CS037613000071\n",
-      "2 1970-01-01 00:00:00.020150529  CS031415000172\n",
-      "3 1970-01-01 00:00:00.020160115  CS028811000001\n",
-      "4 1970-01-01 00:00:00.020170605  CS001215000145\n"
+      "  application_date     customer_id\n",
+      "0         19700101  CS021313000114\n",
+      "1         19700101  CS037613000071\n",
+      "2         19700101  CS031415000172\n",
+      "3         19700101  CS028811000001\n",
+      "4         19700101  CS001215000145\n"
      ]
     }
    ],
    "source": [
-    "df_customer['application_date']=pd.to_datetime(df_customer['application_date'])\n",
+    "import datetime\n",
+    "df_customer['application_date']=pd.to_datetime(df_customer['application_date']).dt.strftime(\"%Y%m%d\")\n",
     "df_customer3=df_customer.head()\n",
     "print(df_customer3.loc[:,['application_date','customer_id']])"
    ]
@@ -1016,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
