--- a/pandas_quiz.ipynb
+++ b/pandas_quiz.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -176,7 +176,7 @@
        "72254   20180911  CS018205000001  P071401005         1    1100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -343,7 +343,7 @@
        "7039   6-20100510-1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -384,7 +384,7 @@
        "104681"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -700,7 +700,7 @@
        "6  3-20080127-2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -761,23 +761,78 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  application_date     customer_id\n",
-      "0         19700101  CS021313000114\n",
-      "1         19700101  CS037613000071\n",
-      "2         19700101  CS031415000172\n",
-      "3         19700101  CS028811000001\n",
-      "4         19700101  CS001215000145\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>application_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CS021313000114</td>\n",
+       "      <td>2015-09-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CS037613000071</td>\n",
+       "      <td>2015-04-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CS031415000172</td>\n",
+       "      <td>2015-05-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CS028811000001</td>\n",
+       "      <td>2016-01-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CS001215000145</td>\n",
+       "      <td>2017-06-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      customer_id application_date\n",
+       "0  CS021313000114       2015-09-05\n",
+       "1  CS037613000071       2015-04-14\n",
+       "2  CS031415000172       2015-05-29\n",
+       "3  CS028811000001       2016-01-15\n",
+       "4  CS001215000145       2017-06-05"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import datetime\n",
-    "df_customer['application_date']=pd.to_datetime(df_customer['application_date']).dt.strftime(\"%Y%m%d\")\n",
-    "df_customer3=df_customer.head()\n",
-    "print(df_customer3.loc[:,['application_date','customer_id']])"
+    "tmp_df = df_customer[[\"customer_id\", \"application_date\"]].copy()\n",
+    "tmp_df[\"application_date\"] = pd.to_datetime(tmp_df[\"application_date\"], format=\"%Y%m%d\")\n",
+    "tmp_df[[\"customer_id\", \"application_date\"]].head(5)"
    ]
   },
   {
@@ -815,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -861,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -904,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -917,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -930,7 +985,7 @@
        "(10030, 10023)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
