--- a/sklearn_quiz.ipynb
+++ b/sklearn_quiz.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "UCgaMzcYFTtW"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "id": "YKJY4Q9R0aB7"
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -182,7 +182,7 @@
               "4                5.0               3.6                1.4               0.2"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -216,7 +216,7 @@
               "(150, 4)"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -288,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -349,16 +349,16 @@
           "output_type": "stream",
           "text": [
             "     target\n",
-            "125       2\n",
-            "21        0\n",
-            "20        0\n",
-            "43        0\n",
-            "77        1\n",
-            "136       2\n",
-            "81        1\n",
-            "134       2\n",
-            "76        1\n",
-            "108       2\n"
+            "52        1\n",
+            "112       2\n",
+            "18        0\n",
+            "79        1\n",
+            "139       2\n",
+            "133       2\n",
+            "80        1\n",
+            "149       2\n",
+            "93        1\n",
+            "66        1\n"
           ]
         }
       ],
@@ -381,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -394,10 +394,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x12b29951460>"
+              "<matplotlib.legend.Legend at 0x188a4a41eb0>"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "KZfVWvll9T-X"
       },
@@ -482,7 +482,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -523,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "id": "tQGdKQsh_HHe"
       },
@@ -545,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -968,7 +968,7 @@
               "RandomForestClassifier()"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -999,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "id": "RUgEb9q-Idbb"
       },
@@ -1029,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
